--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,10 @@ body {
     padding: 0;
 }
 
+button:hover {
+    cursor: pointer;
+}
+
 /* Cookies Banner */
 
 .cookies-banner {
@@ -135,12 +139,27 @@ dialog .close-dialog:hover {
     padding: 8px;
     border: none;
     margin-top: 20px;
-    background-color: lightgray;
+    background-color: #EBEBEB;
+}
+
+.manage-cookies div:last-of-type button:last-of-type {
+    background-color: #0067B8;
+    color: white;
+}
+
+.manage-cookies div:last-of-type button:last-of-type:disabled {
+    background-color: rgba(0, 120, 215, 0.2);
+    color: rgba(0, 0, 0, 0.2);
+}
+
+.manage-cookies div:last-of-type button:hover {
+    box-shadow: -.5px 4px 7px 2px rgba(0, 0, 0, .2), inset 0 0 0 50px rgba(104, 103, 103, 0.1);
 }
 
 .manage-cookies div:last-of-type button:disabled {
     opacity: 90%;
     cursor: not-allowed;
+    box-shadow: none;
 }
 
 dialog fieldset {
