--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,81 @@ nav ul li a:hover {
     color:rgb(36, 35, 35);
 }
 
+nav #all_microsoft {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+nav #all_microsoft:hover a:first-of-type, .clicked {
+    border-bottom: 2px solid rgb(36, 35, 35);
+    padding-bottom: 3px;
+}
+
+/* nav #all_microsoft:hover .all_micro_content{
+    display: block;
+} */
+
+nav #all_microsoft .all_micro_content > div {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.all_micro_content {
+    display: block;
+    position: absolute;
+    background-color:rgba(240, 240, 240);
+    border: 1px solid rgba(225, 225, 225, 0.8);
+    border-bottom: 2px solid black;
+    width: 94vw;
+    margin: 0 auto;
+    box-sizing: border-box;
+    /* top: 30px; */
+    top: -1000px;
+    right: -180px;
+    opacity: 0;
+    transition: opacity .2s;
+
+}
+
+.all_micro_content .footer-column {
+    display: block;
+    padding-top: 20px;
+    min-width: 200px;
+    flex-basis: 200px;
+}
+
+.footer-column > li {
+    padding-bottom: 40px;
+}
+
+.footer-column a li {
+    padding-bottom: 30px
+}
+
+.footer-column a:hover {
+    text-decoration: underline;
+}
+
+.all_micro_content .go-to-sitemap {
+    width: 100%;
+    padding: 10px 0px;
+    border: none;
+    background-color:rgb(225, 225, 225);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: .75rem;
+}
+
+.go-to-sitemap img {
+    width: 15px;
+    transform: rotate(180deg);
+    font-size: .5rem;
+}
+
 nav #more_dropdown {
     display: none;
 }
