--- a/css/styles.css
+++ b/css/styles.css
@@ -735,43 +735,101 @@ footer .language-copyright ul a:first-child li {
 
     nav {
         position: relative;
+        border-bottom: 1px solid rgba(225, 225, 225, 0.8);
+        justify-content: center;
     }
 
     nav .nav-icons-right {
         display: flex;
         width: 100%;
-        justify-content: flex-end;
+        position: absolute;
+        /* justify-content: flex-end; */
     }
 
     nav .nav-icons-right a:first-of-type {
         margin-right: auto;
+        margin-left: 48px;
     }
 
     nav .main-nav li:nth-of-type(5), nav .main-nav li:nth-of-type(6), nav .main-nav li:nth-of-type(7) {
         display: list-item;
     }
 
+    /* Hamburger Menu */
+
     .hamburger_button{
         display: block;
-        /* position: absolute; */
+        position: absolute;
         padding: 1px;
+        margin-left: 2px;
         top: 0;
         left: 0;
         width: 50px;
-        height: 100%;
+        height: 90%;
+    }
+    .hamburger_button > input:hover {
+        cursor: pointer;
     }
 
     .hamburger_button > input {
-        border: 1px dashed black;
         width: 100%;
         height: 100%;
-        opacity: 25%;
+        opacity: 0%;
+        z-index: 3;
+        position: relative;
     }
 
-    nav img[src*="https"] {
+    .hamburger_button > input:checked + .hamburger-line-container > div {
+        transform: rotate(135deg);
+        height: 0.25px;
+    }
+    
+    .hamburger_button > input:checked + .hamburger-line-container > div:before {
+        width: 0%;
+    }
+    .hamburger_button > input:checked + .hamburger-line-container > div:after {
+        top: 0;
+        transform: rotate(90deg);
+        height: 0.25px;
+    }
+
+    .hamburger-line-container {
+        position: relative;
+        top: -49px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        /* background-color: pink; */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        /* z-index: 1; */
+    }
+
+    .hamburger-line-container > div {
         position: absolute;
-        margin: 0 40vw;
-        padding: 0;
+        content: "";
+        width: 45%;
+        height: 1px;
+        background-color: black;
+    }
+
+    .hamburger-line-container > div::before {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 1px;
+        background-color: inherit;
+        top: -5px;
+    }
+
+    .hamburger-line-container > div::after {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 1px;
+        background-color: inherit;
+        top: 5px;
     }
 
     nav ul.main-nav {
@@ -787,26 +845,34 @@ footer .language-copyright ul a:first-child li {
         width: 100%;
         align-items: flex-start;
         background-color:rgba(240, 240, 240);
-        border: 1px solid rgba(225, 225, 225, 0.8);
+        /* border: 1px solid rgba(225, 225, 225, 0.8); */
         border-bottom: 2px solid black;
         font-size: 1rem;
     }
 
     nav ul li, .main-nav div {
-        padding: 1rem 15px;
+        padding: 1rem 0px 1rem 15px;
         border-bottom: 1px solid rgba(225, 225, 225, 0.8);
         width: 100%;
     }
 
+    nav ul div li {
+        margin-left: 15px;
+    }
+
     .main-nav img {
-    width: 10px;
+    width: 12px;
     transform: rotate(270deg);
+    position: absolute;
+    top: 20px;
+    right: 20px;
     }
 
     .main-nav > div {
         display: flex;
         justify-content: space-between;
         position: relative;
+        flex-direction: column;
     }
 
     .main-nav div .go-to-sitemap {
@@ -818,8 +884,21 @@ footer .language-copyright ul a:first-child li {
     }
 
     .main-nav div div {
-        opacity: 0%;
-        position: absolute;
+        position: unset;
+        border-bottom: none;
+        display: none;
+        opacity: 100%;
+        padding: 0px;
+    }
+
+    .main-nav div div li:first-of-type {
+        padding-top: 2rem;
+    }
+
+    .main-nav div div li:last-of-type {
+        padding-bottom: 0px;
+        border-bottom: none;
+        margin-left: 15px;
     }
 
     nav #more_dropdown {
