--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
     background-color: #fff;
     color:black;
     font-size: 15px;
+    overflow-x: hidden;
 }
 
 /* Global Elements */
@@ -195,7 +196,7 @@ nav {
 
 .container:nth-of-type(2) {
     background-repeat: no-repeat;
-    background-image: url(/images/showcase_xlarge.png);
+    /* background-image: url(/images/showcase_xlarge.png); */
     background-size: 100%;
 }
 
@@ -459,8 +460,15 @@ nav .more_div div {
 /* Showcase / Slider */
 
 .slider {
-    width: 100%;
-    position: relative;
+    width: 200%;
+    display: flex;
+    overflow: hidden;
+    flex-direction: row;
+    /* position: relative; */
+}
+
+.slider.reverse {
+    flex-direction: row-reverse;
 }
 
 .slide {
@@ -578,26 +586,43 @@ nav .more_div div {
 }
 
 .slider-nav {
-    position: absolute;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    padding-top: 10px;
+    align-items: center;
+    padding-top: 6px;
     width: 100%;
-    height: 100px;
-    top: 89%;
+    /* height: 100px; */
     background-color: white;
 }
 
 .slider__btn {
     background: none;
     border: none;
-    width: 50px;
-    height: 50px;
+    /* width: 50px;
+    height: 50px; */
+    width: 48px;
+    height: 48px;
 }
 
 .slider__btn img {
-    width: 40%;
+    /* width: 40%; */
+    padding: 15px 15px;
+}
+
+.slider__btn.slider__btn--left:hover img, .slider__btn.slider__btn--right:hover img {
+    padding: 15px 25px 15px 5px;
+}
+
+.slider__btn.slider__btn--play img {
+    width: 100%;
+}
+
+.slider__btn.slider__btn--play img[src="/images/pause-button.png"] {
+    filter: invert();
+} 
+
+.slider__btn.slider__btn--play:hover img {
+    filter: invert();
 }
 
 .slider-nav button:last-of-type img {
@@ -606,37 +631,28 @@ nav .more_div div {
 
 /* Slider Dots */
 .dots {
-    /* position: absolute;
-    bottom: 5%;
-    left: 50%; */
-    /* transform: translateX(-50%); */
     display: flex;
-  }
+    margin: 0px 15px;
+    /* align-self: flex-start; */
+}
   
-  .dots__dot {
-    border: none;
-    background-color: #b9b9b9;
-    opacity: 0.7;
-    height: 1rem;
-    width: 1rem;
+.dots__dot {
+    border: 1px solid black;
+    background-color: white;
+    height: .6rem;
+    width: .6rem;
     border-radius: 50%;
-    margin-right: 1.75rem;
-    cursor: pointer;
-    transition: all 0.5s;
-  
-    /* Only necessary when overlying images */
-    /* box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.7); */
-  }
-  
-  .dots__dot:last-child {
+    margin-right: 2rem;
+    transition: all 0.2s;
+}
+
+.dots__dot:last-child {
     margin: 0;
-  }
-  
-  .dots__dot--active {
-    /* background-color: #fff; */
-    background-color: #888;
-    opacity: 1;
-  }
+}
+
+.dots__dot--active {
+background-color: black;
+}
 
 /*Link Cards*/
 
