--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,8 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #fff;
     color:black;
-    font-size: 15px;
+    /* font-size: 16px; */
+    font-size: 1rem;
     overflow-x: hidden;
 }
 
@@ -19,7 +20,6 @@ body {
 
 .body-container {
     width: 100%;
-    /* max-width: 1175px; */
     margin: 0 auto;
     padding: 0;
 }
@@ -183,7 +183,6 @@ nav {
     justify-content: space-between;
     align-items: center;
     height: 55px;
-    /* padding: 18px 0px; */
     font-size: 13px;
 }
 
@@ -210,7 +209,6 @@ nav {
     top: unset;
     right: 10px;
     width: 75px;
-    /* display: flex; */
     display: none;
     align-items: center;
     justify-content: center;
@@ -218,7 +216,6 @@ nav {
 }
 
 .search_bar {
-    /* display: flex; */
     display: none;
     flex-direction: row-reverse;
     border: 1px solid grey;
@@ -237,7 +234,6 @@ nav {
 /* Remains Across all Sizes for Search */
 
 .search_return_btn:hover {
-    /* background-color: yellow; */
     cursor: pointer;
 }
 
@@ -282,7 +278,6 @@ nav {
 
 .search_bar #search_submit img {
     width: 25px;
-    /* margin: 0 10px; */
     display: inline-block;
 }
 
@@ -307,7 +302,6 @@ nav ul li {
 
 nav ul li:last-of-type {
     margin-left: auto;
-    /* padding-right: 30px; */
 }
 
 nav ul li a {
@@ -358,7 +352,6 @@ nav #all_microsoft > img, #more_dropdown > img {
 }
 
 .all_micro_content {
-    /* display: block; */
     display: none;
     position: absolute;
     background-color:rgba(240, 240, 240);
@@ -461,7 +454,6 @@ nav .more_div div {
     display: flex;
     overflow: hidden;
     flex-direction: row;
-    /* position: relative; */
 }
 
 .slider.reverse {
@@ -471,48 +463,48 @@ nav .more_div div {
 .slide, .showcase-two, .showcase-three {
     width: 100%;
     position: relative;
-    /* position: absolute; */
     top: 0;
-    /* padding: 120px 0 0 75px; */
+}
+
+.slide {
+    margin-bottom: -25px;
 }
 
 .slide img, .showcase-two img, .showcase-three img {
     width: 100%;
 }
 
-.slide > div, .showcase-two > div, .showcase-three > div {
+.slide > div {
     width: 30%;
     display: flex;
     flex-direction: column;
     position: absolute;
     top: 32%;
     left: 115px;
-};
+}
 
-/* Below not taking effect due to order in Css??? */
-
-/* #showcase-internaldiv {
+.showcase-two > div, .showcase-three > div {
     width: 37.5%;
     display: flex;
     flex-direction: column;
     background-color: white;
-    padding: 50px;
+    padding: 47px;
     position: absolute;
-    top: 28%;
-    left: 55px;
-}; */
+    margin-top: -400px;
+    left: 5%;
+    box-shadow: 0 0.1875rem 0.4375rem 0 rgb(0 0 0 / 13%), 0 0.0625rem 0.125rem 0 rgb(0 0 0 / 11%);
+}
+
+.showcase-three > div {
+    margin-top: -430px;
+}
 
 .slide:nth-of-type(2) > div{
     width: 30%;
     left: 110px;
 }
 
-.slide:nth-of-type(2) h2 {
-    font-size: 1.8rem;
-    margin-bottom: 20px;
-}
-
-.slide:nth-of-type(2) .btn {
+/* .slide:nth-of-type(2) .btn {
     width: unset;
     padding: .625rem .75rem;
     border-radius: .125rem;
@@ -522,7 +514,7 @@ nav .more_div div {
     margin-right: 1.5rem;
     margin-top: .5rem;
     margin-bottom: .5rem;
-}
+} */
 
 .slide:nth-of-type(2) .btn_group > a {
     padding-top: .5rem;
@@ -537,14 +529,15 @@ nav .more_div div {
     opacity: 100%;
 }
 
-.slide h2 {
+.slide h2, .showcase-two h2, .showcase-three h2 {
     margin-bottom: 10px;
     font-weight: 500;
+    font-size: 1.5rem;
 }
 
-.slide div p {
+.slide div p, .showcase-two div p, .showcase-three div p {
     line-height: 1.5rem;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .slide .btn_group {
@@ -553,13 +546,18 @@ nav .more_div div {
     width: 90%;
 }
 
-.slide .btn {
-    width: 160px;
-    padding: 10px 5px;
-    /* margin-top: 20px; */
-    background-color: black;
+.slide .btn, .showcase-two .btn, .showcase-three .btn {
+    width: fit-content;
+    padding: .625rem .75rem;
+    border-radius: .125rem;
+    font-weight: 600;
+    border: .125rem solid transparent;
+    background-color: #0067b8;
+    margin-right: 1.5rem;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+    line-height: 1rem;
     color: white;
-    font-weight: bold;
 }
 
 .slide .btn a {
@@ -593,21 +591,17 @@ nav .more_div div {
     align-items: center;
     padding-top: 6px;
     width: 100%;
-    /* height: 100px; */
     background-color: white;
 }
 
 .slider__btn {
     background: none;
     border: none;
-    /* width: 50px;
-    height: 50px; */
     width: 48px;
     height: 48px;
 }
 
 .slider__btn img {
-    /* width: 40%; */
     padding: 15px 15px;
 }
 
@@ -635,7 +629,6 @@ nav .more_div div {
 .dots {
     display: flex;
     margin: 0px 15px;
-    /* align-self: flex-start; */
 }
   
 .dots__dot {
@@ -659,24 +652,14 @@ background-color: black;
 /*Link Cards*/
 
 .linkcards {
-    width: 95%;
+    width: 100%;
     display: flex;
-    justify-content: space-around;
-    margin: 60px auto;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 2rem 0 3.5rem 0;
 }
 
 .linkcards .card {
-    /*flex-basis: 16%;*/
-    width: 184px;
-    padding: 10px 0;
-}
-
-.linkcards .card img {
-    width: 40px;
-    padding-bottom: 5px;
-}
-
-.card a{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -684,27 +667,33 @@ background-color: black;
     text-align: center;
     text-decoration: none;
     color: black;
-    font-size: .9em;
+    font-size: .85em;
+    margin: 1.5rem;
+}
+
+.linkcards .card img {
+    width: 40px;
+    padding-bottom: 5px;
+}
+
+.card a {
+    color: #0067b8;
+    font-weight: 600;
+}
+
+.card a h3{
+    font-weight: inherit;
 }
 
 .card a:hover {
-    text-decoration: underline;
-    text-decoration-thickness: 2px;
-}
-
-.card a:active {
-    border: black 2px solid;
-}
-
-.card a h3 {
-    width: 75%;
+    cursor: pointer;
 }
 
 /* Image Cards 1 */
 
 .image-cards {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     width: 100%;
     grid-gap: 25px;
     margin-bottom: 30px;
@@ -737,25 +726,11 @@ background-color: black;
     padding: 10px 0;
 }
 
-.imgcard:nth-of-type(1) p{
+.imgcard:nth-of-type(1) p {
     width: 90%;
 }
 
 /* Showcase 2 & Showcase 3 */
-
-.showcase-two h2, .showcase-three h2 {
-    margin-bottom: 10px;
-    font-weight: 500;
-}
-
-.showcase-two .btn, .showcase-three .btn {
-    width: 160px;
-    padding: 10px 5px;
-    margin-top: 20px;
-    background-color: black;
-    color: white;
-    font-weight: bold;
-}
 
 .showcase-two .btn a, .showcase-three .btn a {
     display: flex;
@@ -788,13 +763,13 @@ background-color: black;
 
 .image-cards .imgcard .newicon+h2 {
     padding-top: 0px !important;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
     color: black;
-    font-size: 20px;
+    font-size: 20px; */
 }
 
-.imgcard:nth-of-type(2) h2, p{
+.imgcard:nth-of-type(2) h2, .imgcard:nth-of-type(2) p {
     width: 95%;
 }
 
@@ -907,6 +882,36 @@ footer .language-copyright ul a:first-child li {
         right: -175px;
     }
 
+    .slide h2, .showcase-two h2, .showcase-three h2 {
+        margin-bottom: 10px;
+        font-weight: 500;
+        font-size: 1.8rem;
+    }
+
+    .linkcards .card {
+        margin: 1rem 1.5rem;
+    }
+
+    .image-cards {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        width: 100%;
+        grid-gap: 25px;
+        margin-bottom: 30px;
+    }
+
+    .image-cards .imgcard h2 {
+        padding-top: 2.5rem;
+        padding-bottom: .75rem;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 600;
+        color: black;
+        font-size: 1.5rem;
+    }
+
+    .image-cards .imgcard p {
+        line-height: 1.5rem;
+    }
 }
 
 @media (min-width: 900px) and (max-width: 1083px) {
@@ -916,13 +921,21 @@ footer .language-copyright ul a:first-child li {
         display: flex;
         flex-direction: column;
         position: relative;
-        box-shadow: 0px 0px 0.5px 1px rgb(0 0 0 / 20%);
+        box-shadow: 0 0.1875rem 0.4375rem 0 rgb(0 0 0 / 13%), 0 0.0625rem 0.125rem 0 rgb(0 0 0 / 11%);
         background-color: white;
         margin: 0 auto;
-        /* top: 300px; */
         top: -50px;
-        padding: 50px;
+        padding: 47px 47px 42px 47px;
         left: 0px;
+    }
+
+    .showcase-three > div {
+        padding: 48px;
+    }
+
+    .showcase-three .btn {
+        margin-top: 1rem;
+        margin-bottom: 0rem;
     }
 
     .slide:nth-of-type(2) > div {
@@ -939,14 +952,6 @@ footer .language-copyright ul a:first-child li {
 }
 
 @media (max-width: 1000px) {
-
-    .image-cards {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        width: 100%;
-        grid-gap: 25px;
-        margin-bottom: 30px;
-    }
 
     footer .sitemap {
         display: grid;
@@ -1019,7 +1024,6 @@ footer .language-copyright ul a:first-child li {
         display: flex;
         width: 100%;
         position: absolute;
-        /* justify-content: flex-end; */
     }
 
     nav .nav-icons-right a:first-of-type {
@@ -1075,11 +1079,9 @@ footer .language-copyright ul a:first-child li {
         left: 0px;
         width: 100%;
         height: 100%;
-        /* background-color: pink; */
         display: flex;
         align-items: center;
         justify-content: center;
-        /* z-index: 1; */
     }
 
     .hamburger-line-container > div {
@@ -1112,7 +1114,6 @@ footer .language-copyright ul a:first-child li {
         list-style-type: none;
         position: absolute;
         top: 55px;
-        /* display: flex; */
         display: none;
         flex-direction: column;
         flex: 1;
@@ -1198,7 +1199,6 @@ footer .language-copyright ul a:first-child li {
     /* Search Functionality */
 
     .search_bar {
-        /* display: flex; */
         display: none;
         flex-direction: row;
         border: 1px solid grey;
@@ -1219,7 +1219,6 @@ footer .language-copyright ul a:first-child li {
         padding: 1px;
         margin-left: 2px;
         width: 50px;
-        /* display: flex; */
         display: none;
         align-items: center;
         justify-content: center;
@@ -1231,12 +1230,13 @@ footer .language-copyright ul a:first-child li {
     }
 
     /* Slideshow */
+
     .slide > div, .showcase-two > div, .showcase-three > div {
         width: 100%;
         display: flex;
         flex-direction: column;
         position: relative;
-        box-shadow: 0px 0.5px 1px 0px rgb(0 0 0 / 20%);
+        box-shadow: 0 0.1875rem 0.4375rem 0 rgb(0 0 0 / 8%), 0 0.0625rem 0.125rem 0 rgb(0 0 0 / 8%);
         background-color: white;
         margin: 0 auto;
         top: -3px;
@@ -1246,12 +1246,18 @@ footer .language-copyright ul a:first-child li {
 
     .showcase-two > div, .showcase-three > div {
         box-shadow: none;
-        padding: 15px;
+        padding: 3rem 12px;
     }
 
     .slide:nth-of-type(2) > div {
         width: 100%;
         left: 0px;
+    }
+
+    /* Link Cards */
+
+    .linkcards {
+        margin: 0rem 0 0.5rem 0;
     }
 }
 
@@ -1264,6 +1270,7 @@ footer .language-copyright ul a:first-child li {
     }
 
     /* Slideshow */
+
     .slide > div, .showcase-two > div, .showcase-three > div {
         width: 100%;
         display: flex;
@@ -1279,12 +1286,22 @@ footer .language-copyright ul a:first-child li {
 
     .showcase-two > div, .showcase-three > div {
         box-shadow: none;
-        padding: 15px;
+        padding: 3rem 12px;
     }
 
     .slide:nth-of-type(2) > div {
         width: 100%;
         left: 0px;
+    }
+
+    /* Image Cards */
+
+    .image-cards {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+        grid-gap: 25px;
+        margin-bottom: 30px;
     }
     
 }
