--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,11 @@ button:hover {
     cursor: pointer;
 }
 
+.btn:hover {
+    cursor: pointer;
+    box-shadow: inset 50px 50px 10px 10px rgba(0, 0, 0, .1);
+}
+
 /* Cookies Banner */
 
 .cookies-banner {
@@ -374,15 +379,15 @@ nav #all_microsoft > img, #more_dropdown > img {
     flex-basis: 200px;
 }
 
-.footer-column > li {
+.all_micro_content .footer-column > li {
     padding-bottom: 40px;
 }
 
-.footer-column a li {
+.all_micro_content .footer-column a li {
     padding-bottom: 30px
 }
 
-.footer-column a:hover {
+.all_micro_content .footer-column a:hover {
     text-decoration: underline;
 }
 
@@ -452,7 +457,7 @@ nav .more_div div {
 .slider {
     width: 200%;
     display: flex;
-    overflow: hidden;
+    /* overflow: hidden; */
     flex-direction: row;
 }
 
@@ -464,10 +469,6 @@ nav .more_div div {
     width: 100%;
     position: relative;
     top: 0;
-}
-
-.slide {
-    margin-bottom: -25px;
 }
 
 .slide img, .showcase-two img, .showcase-three img {
@@ -501,31 +502,26 @@ nav .more_div div {
 
 .slide:nth-of-type(2) > div{
     width: 30%;
-    left: 110px;
 }
-
-/* .slide:nth-of-type(2) .btn {
-    width: unset;
-    padding: .625rem .75rem;
-    border-radius: .125rem;
-    font-weight: 600;
-    border: .125rem solid transparent;
-    background-color: #0067b8;
-    margin-right: 1.5rem;
-    margin-top: .5rem;
-    margin-bottom: .5rem;
-} */
 
 .slide:nth-of-type(2) .btn_group > a {
     padding-top: .5rem;
     padding-bottom: .5rem;
-    color: black;
+    /* color: black; */
     opacity: 100%;
+}
+
+.slide:nth-of-type(2) .btn_group > a:hover {
+    text-decoration: underline;
+}
+
+.slide:nth-of-type(2) .btn_group > a:hover img {
+    margin-left: 5px;
 }
 
 .slide:nth-of-type(2) .imgcardarrow {
     width: 24px;
-    filter: unset;
+    filter: invert(30%) sepia(89%) saturate(6133%) hue-rotate(235deg) brightness(99%) contrast(93%);
     opacity: 100%;
 }
 
@@ -537,7 +533,8 @@ nav .more_div div {
 
 .slide div p, .showcase-two div p, .showcase-three div p {
     line-height: 1.5rem;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
+    margin: .6rem 0;
 }
 
 .slide .btn_group {
@@ -583,6 +580,7 @@ nav .more_div div {
     font-weight: 500;
     opacity: .75;
     padding: 10px 0;
+    color: #0067b8;
 }
 
 .slider-nav {
@@ -705,7 +703,7 @@ background-color: black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
     color: black;
-    font-size: 20px;
+    font-size: 21px;
 }
 
 .image-cards .imgcard img {
@@ -724,6 +722,20 @@ background-color: black;
     font-weight: 500;
     opacity: .75;
     padding: 10px 0;
+    /* position: relative; */
+}
+
+.imgcard div {
+    cursor: pointer;
+}
+
+.imgcard a:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.imgcard a:hover img {
+    margin-left: 5px;
 }
 
 .imgcard:nth-of-type(1) p {
@@ -759,14 +771,11 @@ background-color: black;
     font-size: .9em;
     letter-spacing: .06em;
     margin-bottom: 5px;
+    font-weight: 600;
 }
 
 .image-cards .imgcard .newicon+h2 {
     padding-top: 0px !important;
-    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 600;
-    color: black;
-    font-size: 20px; */
 }
 
 .imgcard:nth-of-type(2) h2, .imgcard:nth-of-type(2) p {
@@ -782,18 +791,20 @@ background-color: black;
 .container .socialarea {
     display: flex;
     align-items: center;
-    margin-bottom: 40px;
+    margin-bottom: 100px;
+    margin-top: 50px;
 }
 
 .container .socialarea h4 {
     font-weight: normal;
-    opacity: .6;
     padding-right: 5px;
 }
 
 .socialarea .social-icon {
     width: 28px;
-    margin: 0 8px;
+    margin: 0 9px;
+    /* filter: grayscale(); */
+    /* filter: invert(); */
 }
 
 /* Sitemap Footer */
@@ -801,27 +812,56 @@ background-color: black;
 footer {
     background-color: rgba(230, 228, 228, 0.712);
     color: rgb(95, 95, 95);
+    width: 100%;
+}
+
+footer .body-container, .container:nth-of-type(1) {
+    width: unset;
+    padding: 0 12px;
 }
 
 footer a, footer li {
-    font-size: 12px;
+    font-size: 11px;
     padding: 8px 0;
     color: inherit;
     text-decoration: none;
+    line-height: 16px;
+}
+
+footer .language-copyright a {
+    font-size: 11px;
+    padding: 30px 0 16px 0;
+    color: inherit;
+    text-decoration: none;
+    line-height: 16px;
+}
+
+footer .language-copyright li {
+    font-size: 11px;
+    padding: 0px;
+    color: inherit;
+    text-decoration: none;
+    line-height: 16px;
+}
+
+footer .language-copyright ul > li {
+    padding: 30px 0 16px 0;
 }
 
 footer a:hover {
     text-decoration: underline;
+    color: black;
 }
 
 footer .sitemap {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    padding: 30px 0;
+    grid-template-columns: repeat(3, 1fr);
+    /* padding: 30px 0; */
 }
 
 .sitemap ul {
     list-style-type: none;
+    padding: 28px 12px 0px 12px;
 }
 
 .sitemap .footer-column a:first-child li {
@@ -840,9 +880,9 @@ footer .sitemap {
 
 /* Language and Copyright*/
 
-footer .language-copyright {
+/* footer .language-copyright {
     padding-bottom: 10px;
-}
+} */
 
 footer .language-copyright ul {
     display: flex;
@@ -863,6 +903,13 @@ footer .language-copyright ul a:first-child li {
 }
 
 /*Media Queries*/
+
+@media (min-width: 1084px) and (max-width: 1179px) {
+    .slide > div {
+        top: 20%;
+        left: 100px;
+    }
+}
 
 @media (min-width: 1084px) {
 
@@ -885,6 +932,23 @@ footer .language-copyright ul a:first-child li {
     .slide h2, .showcase-two h2, .showcase-three h2 {
         margin-bottom: 10px;
         font-weight: 500;
+        font-size: 1.8rem;
+    }
+
+    .slide:nth-of-type(2) .imgcardarrow {
+        filter: unset;
+        opacity: 100%;
+    }
+
+    .slide .btn_group > a {
+    color: black;
+    }
+
+    .showcase-two {
+        margin: 5.5rem 0;
+    }
+
+    .container h2#businessheader {
         font-size: 1.8rem;
     }
 
@@ -912,9 +976,27 @@ footer .language-copyright ul a:first-child li {
     .image-cards .imgcard p {
         line-height: 1.5rem;
     }
+
+    footer .sitemap {
+        grid-template-columns: repeat(6, 1fr);
+    }
+
+    .sitemap ul {
+        list-style-type: none;
+        padding: 28px 0px 0px 0px;
+    }
+
+    footer .body-container, .container:nth-of-type(1) {
+        width: unset;
+        padding: 0 5%;
+    }
 }
 
 @media (min-width: 900px) and (max-width: 1083px) {
+
+    .slide {
+        margin-bottom: -25px;
+    }
 
     .slide > div, .showcase-two > div, .showcase-three > div {
         width: 97.5%;
@@ -927,6 +1009,14 @@ footer .language-copyright ul a:first-child li {
         top: -50px;
         padding: 47px 47px 42px 47px;
         left: 0px;
+    }
+
+    .showcase-two {
+        margin: 3.5rem 0;
+    }
+
+    .container h2#businessheader {
+        padding-bottom: .8rem;
     }
 
     .showcase-three > div {
@@ -949,6 +1039,18 @@ footer .language-copyright ul a:first-child li {
         padding: 0;
     }
 
+    .container .socialarea {
+        display: flex;
+        align-items: center;
+        margin-bottom: 100px;
+        margin-top: unset;
+    }
+
+    footer .body-container, .container:nth-of-type(1) {
+        width: unset;
+        padding: 0 12px;
+    }
+
 }
 
 @media (max-width: 1000px) {
@@ -956,7 +1058,7 @@ footer .language-copyright ul a:first-child li {
     footer .sitemap {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        padding: 30px 0;
+        /* padding: 30px 0; */
     }
 
     /* Nav More Dropdown */
@@ -1004,6 +1106,11 @@ footer .language-copyright ul a:first-child li {
         width: 97%;
         margin: 0 auto;
         padding: 0;
+    }
+
+    footer .body-container, .container:nth-of-type(1) {
+        width: unset;
+        padding: 0 12px;
     }
 
 }
@@ -1246,7 +1353,11 @@ footer .language-copyright ul a:first-child li {
 
     .showcase-two > div, .showcase-three > div {
         box-shadow: none;
-        padding: 3rem 12px;
+        padding: 50px 12px;
+    }
+
+    .slide {
+    margin-bottom: unset;
     }
 
     .slide:nth-of-type(2) > div {
@@ -1258,6 +1369,15 @@ footer .language-copyright ul a:first-child li {
 
     .linkcards {
         margin: 0rem 0 0.5rem 0;
+    }
+
+    .container .socialarea {
+    margin-top: unset;
+    }
+
+    footer .body-container, .container:nth-of-type(1) {
+        width: unset;
+        padding: 0 12px;
     }
 }
 
@@ -1286,7 +1406,7 @@ footer .language-copyright ul a:first-child li {
 
     .showcase-two > div, .showcase-three > div {
         box-shadow: none;
-        padding: 3rem 12px;
+        padding: 50px 12px;
     }
 
     .slide:nth-of-type(2) > div {
@@ -1302,6 +1422,19 @@ footer .language-copyright ul a:first-child li {
         width: 100%;
         grid-gap: 25px;
         margin-bottom: 30px;
+    }
+
+    .container .socialarea {
+        margin-top: unset;
+    }
+
+    footer .sitemap {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    footer .body-container, .container:nth-of-type(1) {
+        width: unset;
+        padding: 0 12px;
     }
     
 }
